--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'org.mybatis', name: 'mybatis', version: '3.5.9'
+	implementation group: 'org.mybatis', name: 'mybatis-spring', version: '2.0.6'
 }
 
 tasks.named('test') {
